# BRuntime

./: .clang-format  CMakeLists.txt  main.c
BC/: BC.c  BC.h  BCArray.c  BCArray.h  BCAutoreleasePool.c  BCAutoreleasePool.h  BCCore.h  BCDictionary.c  BCDictionary.h  BCMacroTools.h  BCNumber.c  BCNumber.h  BCObject.c  BCObject.h  BCString.c  BCString.h  BCTypes.h
BCRuntime/: BCAllocator.c  BCAllocator.h  BCArray.c  BCArray.h  BCAutoreleasePool.c  BCAutoreleasePool.h  BCClass.c  BCClass.h  BCClassRegistry.c  BCClassRegistry.h  BCDictionary.c  BCDictionary.h  BCNumber.c  BCNumber.h  BCObject.c  BCObject.h  BCReleasePool.c  BCReleasePool.h  BCRuntime.c  BCRuntime.h  BCSettings.h  BCString.c  BCString.h  BCStringBuilder.c  BCStringBuilder.h  BCTypes.h  CMakeLists.txt
BCRuntime/Array/: BCArray.c  BCArray.h  BCBytesArray.c  BCBytesArray.h  BCVector.c  BCVector.h
BCRuntime/Class/: BCClass.c  BCClass.h  BCClassRegistry.c  BCClassRegistry.h
BCRuntime/Core/: BCAllocator.c  BCAllocator.h  BCArena.c  BCArena.h  BCAutoreleasePool.c  BCAutoreleasePool.h  BCBoxMacro.h  BCClass.c  BCClass.h  BCClassRegistry.c  BCFormat.c  BCFormat.h  BCTypes.h
BCRuntime/List/: BCList.c  BCList.h
BCRuntime/Map/: BCMap.c  BCMap.h
BCRuntime/Number/: BCNumber.c  BCNumber.h
BCRuntime/Object/: BCBytesArray.c  BCBytesArray.h  BCFormat.c  BCFormat.h  BCList.c  BCList.h  BCMap.c  BCMap.h  BCNumber.c  BCNumber.h  BCObject.c  BCObject.h  BCReleasePool.c  BCReleasePool.h  BCSet.c  BCSet.h  BCString.c  BCString.h  BCStringBuilder.c  BCStringBuilder.h
BCRuntime/Pool/: BCAutoreleasePool.c  BCAutoreleasePool.h  BCReleasePool.c  BCReleasePool.h
BCRuntime/Set/: BCSet.c  BCSet.h
BCRuntime/String/: BCString.c  BCString.h  BCStringBuilder.c  BCStringBuilder.h
BCRuntime/Struct/: BCRange.c  BCRange.h
BCRuntime/Utilities/: BCAtomics.h  BCKeywords.h  BCMacro.h  BCMemInfo.c  BCMemInfo.h  BCMemory.c  BCMemory.h  BCThreads.c  BCThreads.h  BC_AnsiEscape.h  BC_Atomics.h  BC_Compat.c  BC_Compat.h  BC_LazyTable.c  BC_LazyTable.h  BC_Macro.h  BC_Memory.c  BC_StrBuilder.c  BC_StrBuilder.h  BC_Threads.c  BC_Threads.h
BCore/: BC.c  BC.h  BC_Keywords.h  BC_Macro.h  BC_Range.h  BC_Settings.h  BC_Types.h  CMakeLists.txt
BCore/Console/: BC_AnsiEscape.h  BC_LazyTable.c  BC_LazyTable.h
BCore/Memory/: BC_Allocator.c  BC_Allocator.h  BC_Arena.c  BC_Arena.h  BC_Memory.c  BC_Memory.h
BCore/Strings/: BC_StringBuilder.c  BC_StringBuilder.h  BC_StringCompat.c  BC_StringCompat.h
BCore/Thread/: BC_Atomics.h  BC_Threads.c  BC_Threads.h
BFramework/: BF.c  BF.h  BF_AutoreleasePool.c  BF_AutoreleasePool.h  BF_Boxing.h  BF_Class.c  BF_Class.h  BF_ClassRegistry.c  BF_Format.c  BF_Format.h  BF_Settings.h  BF_Types.h  CMakeLists.txt
BFramework/BObject/: BO.h  BO_BytesArray.c  BO_BytesArray.h  BO_List.c  BO_List.h  BO_Map.c  BO_Map.h  BO_Number.c  BO_Number.h  BO_Object.c  BO_ReleasePool.c  BO_Set.c  BO_Set.h  BO_String.c  BO_String.h  BO_StringBuilder.c
BFramework/Object/: BO_BytesArray.c  BO_Map.c  BO_Map.h  BO_Number.c  BO_Object.c  BO_Object.h  BO_ReleasePool.c  BO_ReleasePool.h  BO_String.c  BO_String.h  BO_StringBuilder.c  BO_StringBuilder.h
BSkia/: CMakeLists.txt
BSkia/cmake/: Skia.cmake
BSkia/src/: BSkia.cpp  BSkia.h
BSkia/test/: test_bskia.c
BTest/: CMakeLists.txt  main.c
BTest/Benchmarks/: BT_BenchmarkAutoreleasePool.c  BT_Benchmarks.h
BTest/Commons/: BT_Common.c  BT_Common.h
BTest/Tests/: BT_TestArray.c  BT_TestBytesArray.c  BT_TestClass.c  BT_TestMap.c  BT_TestNumbers.c  BT_TestReleasePool.c  BT_TestString.c  BT_Tests.h
BTest/tests/: common.c  test_bytes_array.c  test_class_registry.c  test_map.c  test_numbers.c  test_pool.c  tests.h
BXCompose/: BX.c  BX.h  BX_Settings.h  BX_Types.h  CMakeLists.txt
BXCompose/Composables/: BX_Layout.c  BX_Layout.h  BX_Text.c  BX_Text.h
BXCompose/Core/: BX_Context.c  BX_Context.h  BX_Node.c  BX_Node.h  BX_Scope.h
BXCompose/Render/: BX_Canvas.c  BX_Canvas.h  BX_CanvasStub.c  BX_Window.c  BX_Window.h
BXCompose/State/: BX_MutableState.c  BX_MutableState.h  BX_Remember.c  BX_Remember.h
BXComposeTest/: CMakeLists.txt  main.c
Test/: CMakeLists.txt  main.c
Test/tests/: common.c  test_array.c  test_bytes_array.c  test_class_registry.c  test_map.c  test_numbers.c  test_pool.c  test_pool_benchmark.c  test_string.c  tests.h
