add_library(BCRuntime
		Array/BCBytesArray.c
		Array/BCBytesArray.h
		Number/BCNumber.c
		Number/BCNumber.h
		BCObject.c
		BCObject.h
		BCRuntime.c
		BCRuntime.h
		BCSettings.h
		BCTypes.h
		List/BCList.c
		List/BCList.h
		Map/BCMap.c
		Map/BCMap.h
		Pool/BCAutoreleasePool.c
		Pool/BCAutoreleasePool.h
		Set/BCSet.c
		Set/BCSet.h
		String/BCString.c
		String/BCString.h
		String/BCStringBuilder.c
		String/BCStringBuilder.h
		Utilities/BC_AnsiEscape.h
		Utilities/BC_Keywords.h
		Utilities/BC_Macro.h
        Utilities/BC_Memory.h
		BCAllocator.c
		Utilities/BC_Atomics.h
		Utilities/BC_Memory.c
		Utilities/BC_Threads.c
		Utilities/BC_Threads.h
		Utilities/BC_Compat.c
		Utilities/BC_Compat.h
        BCAllocator.h
		Class/BCClass.c
		Class/BCClass.h
		Class/BCClassRegistry.c
		Class/BCClassRegistry.h
		Pool/BCReleasePool.c
		Pool/BCReleasePool.h
)