add_library(BCRuntime
		BCRuntime.c
		BCRuntime.h
		BCSettings.h
		Core/BCTypes.h
		Core/BCAllocator.c
		Core/BCAllocator.h
		Core/BCArena.c
		Core/BCArena.h
		Core/BCAutoreleasePool.c
		Core/BCAutoreleasePool.h
		Core/BCClass.c
		Core/BCClass.h
		Core/BCClassRegistry.c
		Core/BCBoxMacro.h
		Object/BCBytesArray.c
		Object/BCBytesArray.h
		Object/BCList.c
		Object/BCList.h
		Object/BCMap.c
		Core/BCFormat.c
		Core/BCFormat.h
		Object/BCMap.h
		Object/BCNumber.c
		Object/BCNumber.h
		Object/BCObject.c
		Object/BCObject.h
		Object/BCReleasePool.c
		Object/BCReleasePool.h
		Object/BCSet.c
		Object/BCSet.h
		Object/BCString.c
		Object/BCString.h
		Object/BCStringBuilder.c
		Object/BCStringBuilder.h
		Utilities/BC_AnsiEscape.h
		Utilities/BC_Atomics.h
		Utilities/BC_Compat.c
		Utilities/BC_Compat.h
		Utilities/BC_Keywords.h
		Utilities/BC_Macro.h
		Utilities/BC_Memory.c
		Utilities/BC_Memory.h
		Utilities/BC_Threads.c
		Utilities/BC_Threads.h
		Struct/BCRange.c
		Struct/BCRange.h
)